# TP

./: README.md
ar_marker_test/: CMakeLists.txt  package.xml
ar_marker_test/launch/: ar_marker_world.launch  aruco.launch
ar_marker_test/src/: ar_listener.cpp
ar_marker_test/worlds/: floating_marker.world
aruco_ros/aruco/src/aruco/: markerdetector.cpp
key_teleop/: CMakeLists.txt  package.xml
logistic_task/: CMakeLists.txt  package.xml
logistic_task/launch/: phase1.1.launch  phase1.launch  phase2.launch
logistic_task/src/: logistic_task.cpp
logistic_task/srv/: service.srv
material/img/: final_scene.pgm
material/img/flowchart/: logistic_task
material/video/: logistic_task.mkv  phase1_DwuqUxYo_tik2.mkv  phase2.mkv  positioning-routine.mkv
mobile_navigation/: CMakeLists.txt  package.xml
mobile_navigation/include/navigation/: navigation.h
mobile_navigation/include/navigation/ss/: navigation.h
mobile_navigation/include/routine/: positioning_routine.h
mobile_navigation/launch/: routine.launch
mobile_navigation/param/: controller_param.yaml
mobile_navigation/src/: navigation.cpp  navigation.h  positioning_routine.cpp  positioning_routine.h  service_client.cpp  service_server.cpp
mobile_navigation/srv/: service.srv
planner/: CMakeLists.txt  package.xml
planner/include/rrt/: rrt.h
planner/param/: rrt_params.yaml
planner/src/: rrt.cpp  rrt_node.cpp
trajectory_tracking/: CMakeLists.txt  package.xml
trajectory_tracking/launch/: feedback.launch
trajectory_tracking/script/: plotter.py
turtlebot3/turtlebot3_description/: CMakeLists.txt  package.xml
turtlebot3/turtlebot3_description/launch/: viz.launch
turtlebot3/turtlebot3_description/rviz/: turtlebot3_navigation.rviz
turtlebot3/turtlebot3_description/src/: tf_listener.cpp
turtlebot3/turtlebot3_description/src/plugin/: controller_plugin.cpp
turtlebot3/turtlebot3_description/urdf/: generated.urdf  myrobot.gazebo  myrobot.xacro  turtlebot3_waffle.gazebo.xacro
turtlebot3/turtlebot3_navigation/: CMakeLists.txt  package.xml
turtlebot3/turtlebot3_navigation/launch/: amcl.launch  turtlebot3_navigation.launch
turtlebot3/turtlebot3_navigation/maps/: medium_wh.pgm  medium_wh.yaml  medium_wh_obs.yaml  medium_wh_obs1.pgm  small_wh.pgm  small_wh.yaml  wh_map.pgm  wh_map.yaml
turtlebot3/turtlebot3_navigation/param/: costmap_common_params_waffle.yaml
turtlebot3/turtlebot3_navigation/rviz/: TP_Rviz_config.rviz  turtlebot3_navigation.rviz
turtlebot3/turtlebot3_navigation/src/: move_base_client.cpp
turtlebot3/turtlebot3_slam/: CMakeLists.txt  package.xml
turtlebot3/turtlebot3_slam/launch/: turtlebot3_gmapping.launch  turtlebot3_slam.launch
turtlebot3/turtlebot3_teleop/launch/: turtlebot3_teleop_key.launch
turtlebot3/turtlebot3_teleop/nodes/: turtlebot3_teleop_key
turtlebot3_simulations/turtlebot3_gazebo/: CMakeLists.txt
turtlebot3_simulations/turtlebot3_gazebo/launch/: medium_wh.launch  medium_wh_obs.launch  myrobot.launch  phase1.1.launch  phase1.launch  small_wh.launch  turtlebot3_empty_world.launch
turtlebot3_simulations/turtlebot3_gazebo/models/TP_Scene3/: model.config  model.sdf
turtlebot3_simulations/turtlebot3_gazebo/models/TP_Scene4/: model.config  model.sdf
turtlebot3_simulations/turtlebot3_gazebo/models/WH_new_final/: model.config  model.sdf
turtlebot3_simulations/turtlebot3_gazebo/models/aruco_visual_marker_0/: model.sdf
turtlebot3_simulations/turtlebot3_gazebo/models/aruco_visual_marker_1/: model.sdf
turtlebot3_simulations/turtlebot3_gazebo/models/aruco_visual_marker_2/: model.sdf
turtlebot3_simulations/turtlebot3_gazebo/models/aruco_visual_marker_3/: model.sdf
turtlebot3_simulations/turtlebot3_gazebo/models/aruco_visual_marker_4/: model.sdf
turtlebot3_simulations/turtlebot3_gazebo/models/aruco_visual_marker_7/: model.sdf
turtlebot3_simulations/turtlebot3_gazebo/models/marker26_8cm_massless/: marker26_8cm_massless.sdf
turtlebot3_simulations/turtlebot3_gazebo/models/small_WH/: model.config  model.sdf
turtlebot3_simulations/turtlebot3_gazebo/worlds/: TP_small_WH.world  TP_world.world  WH_new_final.world  empty.world  empty1.world  medium_wh.world  medium_wh_obs.world
